change to https://jflute.hatenadiary.jp/entry/

--- a/web/ja/environment/upgrade/migration/migrate0964to0965.html
+++ b/web/ja/environment/upgrade/migration/migrate0964to0965.html
@@ -43,7 +43,7 @@
 		ディレクトリに(Apache Derbyの)JDBCドライバを配置するようにして下さい。
 	</p>
 	<p>
-		参考：<a href="http://d.hatena.ne.jp/jflute/20090827/1251346250">DBFluteクライアントでJDBCドライバを配置</a>
+		参考：<a href="https://jflute.hatenadiary.jp/entry/20090827/1251346250">DBFluteクライアントでJDBCドライバを配置</a>
 	</p>
 
 	<h2 id="impl">実装上の注意点</h2>
