--- a/web/ja/environment/upgrade/migration/migrate10xto11x.html
+++ b/web/ja/environment/upgrade/migration/migrate10xto11x.html
@@ -112,7 +112,7 @@
 	<p>
 		詳しくはブログの通り。
 	</p>
-	<div class="detailpage"><a href="http://d.hatena.ne.jp/jflute/20141020/slf4j">外部サイト - jfluteの日記 - DBFlute-1.1からは slf4j を使う</a></div>
+	<div class="detailpage"><a href="https://jflute.hatenadiary.jp/entry/20141020/slf4j">外部サイト - jfluteの日記 - DBFlute-1.1からは slf4j を使う</a></div>
 	<p>
 		dependencies だけでなく、logger設定の org.dbflute パッケージへの変更を忘れずに。
 	</p>
@@ -147,7 +147,7 @@
 <span class="keyword">map:</span>{
     <span class="subpoint"># _/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/
     # Migration to Java8 DBFlute
-    # http://d.hatena.ne.jp/jflute/20140530/java8
+    # https://jflute.hatenadiary.jp/entry/20140530/java8
     # _/_/_/_/_/_/_/_/_/
     # compile compatible (true if compatible)
     ; isCompatibleSelectByPKOldStyle = true
@@ -404,7 +404,7 @@
 		未定義区分値のプロパティががらっと変わっています。
 		無理することはありませんが、もしよければ移行という感じで。
 	</p>
-	<div class="detailpage"><a href="http://d.hatena.ne.jp/jflute/20140823/forcecls">DBFlute-1.1の区分値強制のお話</a></div>
+	<div class="detailpage"><a href="https://jflute.hatenadiary.jp/entry/20140823/forcecls">DBFlute-1.1の区分値強制のお話</a></div>
 	<h3 id="renamedfprop">dfpropのファイル名の変更</h3>
 	<p>
 		ファイル名が修正された dfprop があります。古い名前でも動作しますが、移行しておくと良いでしょう。
