--- a/web/ja/introduction/index.html
+++ b/web/ja/introduction/index.html
@@ -292,7 +292,7 @@
 			その中で、幾つかのサイトが DBFlute
 			を使っていることを公表してもOKしてくれています。それを紹介したブログ記事がありますので、ぜひご覧になってください。
 		</p>
-		<div class="detailpage"><a href="http://d.hatena.ne.jp/jflute/20130307/1362585484">外部サイト - DBFluteの実績サイト</a></div>
+		<div class="detailpage"><a href="https://jflute.hatenadiary.jp/entry/20130307/1362585484">外部サイト - DBFluteの実績サイト</a></div>
 	</div>
 <!-- __content-end__ --></div></div>
 
