--- a/web/ja/manual/function/genbafit/implfit/whererecycle/index.html
+++ b/web/ja/manual/function/genbafit/implfit/whererecycle/index.html
@@ -289,7 +289,7 @@ cb.query().addOrderBy_<span class="abbreviation">...</span>();
 		<p>
 			ブログにも書きました。
 		</p>
-		<div class="detailpage"><a href="http://d.hatena.ne.jp/jflute/20160905/argremocon">メンテ不能の強者、引数リモコンパターン | jfluteの日記</a></div>
+		<div class="detailpage"><a href="https://jflute.hatenadiary.jp/entry/20160905/argremocon">メンテ不能の強者、引数リモコンパターン | jfluteの日記</a></div>
 	</div>
 
 	<h2 id="example">Exampleのススメ</h2>
