--- a/web/ja/manual/function/generator/intro/decomment.html
+++ b/web/ja/manual/function/generator/intro/decomment.html
@@ -473,7 +473,7 @@ java -Dintro.decomment.server=<span class="keyword">true</span> <span class="poi
 			でも、データベースの世界では "コメントを書こう" という意識があまり一般化していないように思えます。
 			ですが、テーブルやカラムこそコメントが欲しいと思う場面が多々あります。
 		</p>
-		<div class="relatedpage"><a href="http://d.hatena.ne.jp/jflute/20170628/letsdbcomment">コードにコメント書くのにDBにコメント書かないの？ | jfluteの日記</a></div>
+		<div class="relatedpage"><a href="https://jflute.hatenadiary.jp/entry/20170628/letsdbcomment">コードにコメント書くのにDBにコメント書かないの？ | jfluteの日記</a></div>
 		<p>
 			月並みですが、データベースはアプリよりも一般的に長生きで、分析が非常にしづらいものです。
 			データを見ればある程度は予測付くこともありますが、テストデータでは情報量が少なく、本番データは容易に見れません。
