--- a/web/ja/manual/function/generator/intro/hacomment.html
+++ b/web/ja/manual/function/generator/intro/hacomment.html
@@ -307,7 +307,7 @@
 		<p>
 			テーブルやカラムのDBコメントも同じですが...
 		</p>
-		<div class="relatedpage"><a href="http://d.hatena.ne.jp/jflute/20170628/letsdbcomment">コードにコメント書くのにDBにコメント書かないの？ | jfluteの日記</a></div>
+		<div class="relatedpage"><a href="https://jflute.hatenadiary.jp/entry/20170628/letsdbcomment">コードにコメント書くのにDBにコメント書かないの？ | jfluteの日記</a></div>
 		<p>
 			<em class="keyword">DB変更履歴にもコードと同じようにコメントしておきましょう！</em>
 		</p>
