--- a/web/ja/manual/function/helper/erflute/index.html
+++ b/web/ja/manual/function/helper/erflute/index.html
@@ -38,7 +38,7 @@
 	<p>
 		ERMaster をフォークした ERMaster-b をフォークしています。
 	</p>
-	<div class="relatedpage"><a href="http://d.hatena.ne.jp/jflute/20161020/newerflute">外部サイト - マージできるERDツール、ERFlute作りました | jfluteの日記</a></div>
+	<div class="relatedpage"><a href="https://jflute.hatenadiary.jp/entry/20161020/newerflute">外部サイト - マージできるERDツール、ERFlute作りました | jfluteの日記</a></div>
 	<h3 id="lasta">スタートアップ＆インクリメンタル開発のために</h3>
 	<p>
 		スタートアップ＆インクリメンタル開発では、テーブルが少ない時代から大規模な時代を経て、様々な特徴的な悩みが発生します。
