--- a/web/ja/manual/function/helper/kvsflute/index.html
+++ b/web/ja/manual/function/helper/kvsflute/index.html
@@ -117,7 +117,7 @@
 	<p>
 		KVSFluteは、"U-NEXTさん" より、コントリビュート頂きました。
 	</p>
-	<div class="detailpage"><a href="http://d.hatena.ne.jp/jflute/20161208/solrkvsflute">U-NEXTさんからSolrFlute,KVSFluteコントリビュート頂きました | jfluteの日記</a></div>
+	<div class="detailpage"><a href="https://jflute.hatenadiary.jp/entry/20161208/solrkvsflute">U-NEXTさんからSolrFlute,KVSFluteコントリビュート頂きました | jfluteの日記</a></div>
 	<p>
 		ありがとうございます！
 	</p>
