--- a/web/ja/manual/function/helper/saflute/index.html
+++ b/web/ja/manual/function/helper/saflute/index.html
@@ -44,7 +44,7 @@
 	<p>
 		そのような変化を受け入れるための細かいケアをしています。
 	</p>
-	<div class="relatedpage"><a href="http://d.hatena.ne.jp/jflute/20130826/saflute">外部サイト - SAFlute始めました</a></div>
+	<div class="relatedpage"><a href="https://jflute.hatenadiary.jp/entry/20130826/saflute">外部サイト - SAFlute始めました</a></div>
 	<dl class="textlist">
 		<dt>ソースコードを読むことが多いため、探しやすく</dt>
 		<dd>
@@ -147,7 +147,7 @@
 			SAStrutsとDBFluteの構成で、少人数でのリーン・スタートアップのサービス構築において生まれました。
 			基本思想と構成は、既に運用実績のあるアーキテクチャと言えます。
 		</p>
-		<div class="relatedpage"><a href="http://d.hatena.ne.jp/jflute/20130302/1362151960">外部サイト - SAStrutsと半同棲の三ヶ月</a></div>
+		<div class="relatedpage"><a href="https://jflute.hatenadiary.jp/entry/20130302/1362151960">外部サイト - SAStrutsと半同棲の三ヶ月</a></div>
 	</div>
 
 	<h2 id="environment">SAFluteの環境</h2>
