--- a/web/ja/manual/function/helper/utflute/index.html
+++ b/web/ja/manual/function/helper/utflute/index.html
@@ -60,7 +60,7 @@ action.index();
 	<p>
 		サンプルコードがブログに載っています。
 	</p>
-	<div class="detailpage"><a href="http://d.hatena.ne.jp/jflute/20140319/1395227927">外部サイト - jfluteの日記 - UTFluteでいろいろ</a></div>
+	<div class="detailpage"><a href="https://jflute.hatenadiary.jp/entry/20140319/1395227927">外部サイト - jfluteの日記 - UTFluteでいろいろ</a></div>
 	<h3 id="refexample">Exampleも参考になります</h3>
 	<p>
 		DBFlute Example では豪快に使っています。
