--- a/web/ja/manual/function/ormapper/behavior/update/batchinsert.html
+++ b/web/ja/manual/function/ormapper/behavior/update/batchinsert.html
@@ -169,7 +169,7 @@ List&lt;Member&gt; memberList = <span class="keyword">new</span> ArrayList&lt;Me
 	<p>
 		以前の悩みがこちらです。<span class="frm">(ようやく改善しました)</span>
 	</p>
-	<div class="detailpage"><a href="http://d.hatena.ne.jp/jflute/20121217/1355749396">外部サイト - jfluteの日記 - DBFluteのノリ切れないやつ、バッチ登録</a></div>
+	<div class="detailpage"><a href="https://jflute.hatenadiary.jp/entry/20121217/1355749396">外部サイト - jfluteの日記 - DBFluteのノリ切れないやつ、バッチ登録</a></div>
 	<h3 id="columnsummary">更新系、列挙されるカラムのまとめ</h3>
 	<p>
 		まとめていますので、ぜひご覧を。
