--- a/web/ja/manual/topic/programming/java/beginners.html
+++ b/web/ja/manual/topic/programming/java/beginners.html
@@ -185,7 +185,7 @@ Caused by: java.lang.ExampleInnerException: Inner Exception
 		例外メッセージを正しく読めれば、かつ、例外メッセージが親切であれば、それだけで原因が判明することが多いです。
 		それを読まずにいきなり(あてもなく)デバッガーを起動してデバッグし始めるのは時間がもったいないと考えられます。
 	</p>
-	<div class="detailpage"><a href="http://d.hatena.ne.jp/jflute/20090224/1235473382">外部サイト - jfluteの日記 - デバッグ手順(スタックトレース重要)</a></div>
+	<div class="detailpage"><a href="https://jflute.hatenadiary.jp/entry/20090224/1235473382">外部サイト - jfluteの日記 - デバッグ手順(スタックトレース重要)</a></div>
 	<h3 id="editorlinenumber">行番号を表示しましょう</h3>
 	<p>
 		例えば Eclipse のエディターは、デフォルトで行番号が表示されていません。
