--- a/web/ja/manual/topic/programming/mind/errormessage.html
+++ b/web/ja/manual/topic/programming/mind/errormessage.html
@@ -31,7 +31,7 @@
 	<p>
 		エラーメッセージは必ず読みましょう。
 	</p>
-	<div class="detailpage"><a href="http://d.hatena.ne.jp/jflute/20130522/errorsinging">エラーメッセージ読め読め大合唱 | jfluteの日記</a></div>
+	<div class="detailpage"><a href="https://jflute.hatenadiary.jp/entry/20130522/errorsinging">エラーメッセージ読め読め大合唱 | jfluteの日記</a></div>
 	<p>
 		特に、DBFluteの例外メッセージは (できるだけ) ド派手です。Adviceなどの様々な情報を読んで、原因追求に努めましょう。
 	</p>
