--- a/web/ja/tutorial/handson/hint/hint09.html
+++ b/web/ja/tutorial/handson/hint/hint09.html
@@ -45,7 +45,7 @@
 		問題分析と問題解決をしっかり分けて考えましょう。
 		なので、最初は問題分析です。いったい何が起きているのか？それを掴みましょう。
 	</p>
-	<div class="detailpage"><a href="http://d.hatena.ne.jp/jflute/20170712/analysissolving">問題分析と問題解決を分けることがハマらない第一歩</a></div>
+	<div class="detailpage"><a href="https://jflute.hatenadiary.jp/entry/20170712/analysissolving">問題分析と問題解決を分けることがハマらない第一歩</a></div>
 	<h3 id="curboreadmessage">そのためにエラーメッセージを読みましょう</h3>
 	<p>
 		そのためには、エラーメッセージには真摯に接しましょう。
