--- a/web/ja/tutorial/handson/review/codingpolicy.html
+++ b/web/ja/tutorial/handson/review/codingpolicy.html
@@ -63,7 +63,7 @@
 	<p>
 		もっと奥が深いものです。ぜひ参考ブログも読んでみてください。
 	</p>
-	<div class="detailpage"><a href="http://d.hatena.ne.jp/jflute/20160912/reviewable">レビューしやすいコード (Reviewable Code) | jfluteの日記</a></div>
+	<div class="detailpage"><a href="https://jflute.hatenadiary.jp/entry/20160912/reviewable">レビューしやすいコード (Reviewable Code) | jfluteの日記</a></div>
 
 	<h2 id="editorwarning">2. エディター警告の解決</h2>
 	<p>
