--- a/web/ja/tutorial/handson/section02.html
+++ b/web/ja/tutorial/handson/section02.html
@@ -234,7 +234,7 @@ PROJECT_ROOT
 		ログを読むものハンズオンです。DBFluteタスクが必ず成功するとは限りません。
 		設定にミスがあれば遠慮なく落ちますので、落ちたときの分析方法をしっかりと知っておきましょう。
 	</p>
-	<div class="relatedpage"><a href="http://d.hatena.ne.jp/jflute/20130522/errorsinging">エラーメッセージ読め読め大合唱 | jfluteの日記</a></div>
+	<div class="relatedpage"><a href="https://jflute.hatenadiary.jp/entry/20130522/errorsinging">エラーメッセージ読め読め大合唱 | jfluteの日記</a></div>
 	<p>
 		ちなみに、問題分析と問題解決をごちゃまぜにしないようにしましょう。
 		まずは分析が大切です。分析の前に解決方法のことばかりを考えてると、解決のヒントを見逃してしまいがちで本末転倒です。
