--- a/web/ja/tutorial/handson/section05.html
+++ b/web/ja/tutorial/handson/section05.html
@@ -226,7 +226,7 @@ select max(login.LOGIN_DATETIME)
 			なかなか議論が尽きないところではありますが、SQLのエリアス名の付け方、こういった考えをもっています。
 			これといった正解をだしづらいものですが、ぜひいちどお読みくださいませ。
 		</p>
-		<div class="detailpage"><a href="http://d.hatena.ne.jp/jflute/20140908/sqlalias">SQLのエリアス名、頭文字省略は...うーん | jfluteの日記</a></div>
+		<div class="detailpage"><a href="https://jflute.hatenadiary.jp/entry/20140908/sqlalias">SQLのエリアス名、頭文字省略は...うーん | jfluteの日記</a></div>
 	</div>
 
 	<h2 id="nextsection">次のセクション</h2>
