--- a/web/ja/tutorial/handson/section06.html
+++ b/web/ja/tutorial/handson/section06.html
@@ -193,7 +193,7 @@
 		<p>
 			ぜひ、こちらのブログもお読みください。
 		</p>
-		<div class="detailpage"><a href="http://d.hatena.ne.jp/jflute/20170804/explossloss">例外メッセージ、敬語で満足でもロスロスパターン | jfluteの日記</a></div>
+		<div class="detailpage"><a href="https://jflute.hatenadiary.jp/entry/20170804/explossloss">例外メッセージ、敬語で満足でもロスロスパターン | jfluteの日記</a></div>
 		<p>
 			<em class="keyword">デバッグ時に嬉しいメッセージってどんなメッセージ？</em>
 			を考え続けることが大切です。
@@ -264,7 +264,7 @@
 		<p>
 			こういった考えでやっていますので、ぜひいちどお読みくださいませ。
 		</p>
-		<div class="detailpage"><a href="http://d.hatena.ne.jp/jflute/20151020/stopgetselect">単純な話、getであんまり検索したくない | jfluteの日記</a></div>
+		<div class="detailpage"><a href="https://jflute.hatenadiary.jp/entry/20151020/stopgetselect">単純な話、getであんまり検索したくない | jfluteの日記</a></div>
 	</div>
 
 	<h2 id="dfpropmisc">DBFluteプロパティあれこれ</h2>
@@ -395,7 +395,7 @@
 		<p>
 			ぜひブログを参考に。
 		</p>
-		<div class="detailpage"><a href="http://d.hatena.ne.jp/jflute/20170628/letsdbcomment">コードにコメント書くのにDBにコメント書かないの？ | jfluteの日記</a></div>
+		<div class="detailpage"><a href="https://jflute.hatenadiary.jp/entry/20170628/letsdbcomment">コードにコメント書くのにDBにコメント書かないの？ | jfluteの日記</a></div>
 		<p>
 			このように、SchemaHTML経由 (Intro経由) で、DBコメントを "みんな" で追加できますので、実務でもどんどん使っていきましょう。
 		</p>
