--- a/web/ja/tutorial/handson/section08.html
+++ b/web/ja/tutorial/handson/section08.html
@@ -203,7 +203,7 @@ cannonball(<span class="keyword">new</span> CannonballRun() {
 	<p>
 		さらに、MySQLでは様々なデッドロックが存在します。ブログ記事をご覧下さい。
 	</p>
-	<div class="detailpage"><a href="http://d.hatena.ne.jp/jflute/20120831/1346393321">外部サイト - MySQLでお手軽デッドロック</a></div>
+	<div class="detailpage"><a href="https://jflute.hatenadiary.jp/entry/20120831/1346393321">外部サイト - MySQLでお手軽デッドロック</a></div>
 
 	<h2 id="refactor">リファクタリングしましょう！</h2>
 	<p>
