--- a/web/ja/tutorial/onjava8.html
+++ b/web/ja/tutorial/onjava8.html
@@ -43,7 +43,7 @@
 	<p>
 		<span class="frm">※一部機能は 1.0.x 系でも取り込まれていますが、このページは 1.1 を中心としたお話です。</span>
 	</p>
-	<div class="relatedpage"><a href="http://d.hatena.ne.jp/jflute/20140530/java8">外部サイト - jfluteの日記 - DBFluteのJava8版というか1.1ではこうなる</a></div>
+	<div class="relatedpage"><a href="https://jflute.hatenadiary.jp/entry/20140530/java8">外部サイト - jfluteの日記 - DBFluteのJava8版というか1.1ではこうなる</a></div>
 
 	<h2 id="select">とにかく検索は？</h2>
 	<h3 id="selectentitycb">ConditionBean で一件検索 <span class="frm">*selectEntity(cb)</span></h3>
@@ -318,7 +318,7 @@ memberBhv.selectCursor(<span class="localvar">cb</span> <span class="keyword">-&
 		また、PrefixSearch や DateFromTo などの、固定オプションのファサード的なメソッドはデフォルトで出力されなくなりました。
 		Lambdaの導入で Option の指定がしやすくなったことにより、LikeSearch や FromTo に統一することにしました。
 	</p>
-	<div class="relatedpage"><a href="http://d.hatena.ne.jp/jflute/20141001/cblambda">外部サイト - jfluteの日記 - DBFlute-1.1でLambdaでCB</a></div>
+	<div class="relatedpage"><a href="https://jflute.hatenadiary.jp/entry/20141001/cblambda">外部サイト - jfluteの日記 - DBFlute-1.1でLambdaでCB</a></div>
 	<h3 id="loadreferrer">子テーブルの検索 (LoadReferrer) <span class="frm">*load(loader)</span></h3>
 	<p>
 		1.0.x系でもサポートされた Loader 方式全開で実装しましょう。
@@ -395,7 +395,7 @@ memberList.forEach(<span class="localvar">member</span> <span class="keyword">-&
 		既に1.0.x系でも batchUpdate() は Setter 呼び出しされたカラムが更新されるようになっています。
 		それにより、オーバーロードのメソッドはあまり意味を持たなくなりましたので、シンプル化しました。
 	</p>
-	<div class="relatedpage"><a href="http://d.hatena.ne.jp/jflute/20141001/cblambda">外部サイト - jfluteの日記 - DBFlute-1.1でLambdaでCB</a></div>
+	<div class="relatedpage"><a href="https://jflute.hatenadiary.jp/entry/20141001/cblambda">外部サイト - jfluteの日記 - DBFlute-1.1でLambdaでCB</a></div>
 
 	<h2 id="outsidesql">外だしSQLのメソッドが変更</h2>
 	<h3 id="outsidesqlflat">用途ごとにチェーンではなくフラットに</h3>
@@ -743,7 +743,7 @@ memberList.forEach(<span class="subpoint">member -&gt; {</span> <span class="com
 	<p>
 		また、Lambdaの引数の変数名で、外側の変数を上書きできないため、何かしらユニークな名前をつけてあげる必要があります。
 	</p>
-	<div class="relatedpage"><a href="http://d.hatena.ne.jp/jflute/20140515/lambda">外部サイト - jfluteの日記 - Java8のラムダの心配なところ...</a></div>
+	<div class="relatedpage"><a href="https://jflute.hatenadiary.jp/entry/20140515/lambda">外部サイト - jfluteの日記 - Java8のラムダの心配なところ...</a></div>
 	<h3 id="recommendedrule">命名の推奨ルール</h3>
 	<p>
 		DBFluteとしては、以下のようなルールで名前を付けることを推奨しています。
@@ -832,12 +832,12 @@ ListResultBean&lt;Member&gt; <span class="localvar">memberList</span> = <span cl
 	<p>
 		CBでnullや空文字入れたら例外に！ <span class="frm">(オプションで戻せます)</span>
 	</p>
-	<div class="relatedpage"><a href="http://d.hatena.ne.jp/jflute/20140813/strict11">外部サイト - jfluteの日記 - DBFlute-1.1になったらStrict</a></div>
+	<div class="relatedpage"><a href="https://jflute.hatenadiary.jp/entry/20140813/strict11">外部サイト - jfluteの日記 - DBFlute-1.1になったらStrict</a></div>
 	<h3 id="cbnullorempty">Strict: SpecifyColumn</h3>
 	<p>
 		CBでSpecifyColumnしてないカラムをgetしたら例外に！ <span class="frm">(オプションで戻せます)</span>
 	</p>
-	<div class="relatedpage"><a href="http://d.hatena.ne.jp/jflute/20141021/nonspecified">外部サイト - jfluteの日記 - DBFlute-1.1からはNonSpecifiedチェック</a></div>
+	<div class="relatedpage"><a href="https://jflute.hatenadiary.jp/entry/20141021/nonspecified">外部サイト - jfluteの日記 - DBFlute-1.1からはNonSpecifiedチェック</a></div>
 
 	<h2 id="migrationto11">1.0.x から 1.1 への移行</h2>
 	<p>
