--- a/web/ja/manual/topic/dbdesign/allinonetableclassification.html
+++ b/web/ja/manual/topic/dbdesign/allinonetableclassification.html
@@ -32,7 +32,7 @@
 
 	<h2 id="about">All-in-Oneテーブル区分値とは？</h2>
 	<p>
-		[作成中] ひとまずこちら：<a href="http://d.hatena.ne.jp/jflute/20091215/1260865365">http://d.hatena.ne.jp/jflute/20091215/1260865365</a>
+		[作成中] ひとまずこちら：<a href="https://jflute.hatenadiary.jp/entry/20091215/1260865365">https://jflute.hatenadiary.jp/entry/20091215/1260865365</a>
 	</p>
 	<h2 id="consideration">All-in-Oneテーブル区分値の考察</h2>
 	<p>
