--- a/web/ja/tutorial/handson/section03.html
+++ b/web/ja/tutorial/handson/section03.html
@@ -182,7 +182,7 @@
 		<p>
 			ぜひ、こちらのブログもお読みください。
 		</p>
-		<div class="detailpage"><a href="http://d.hatena.ne.jp/jflute/20180625/repeatablecomment">オートマティックおうむ返しコメントより背景や理由を | jfluteの日記</a></div>
+		<div class="detailpage"><a href="https://jflute.hatenadiary.jp/entry/20180625/repeatablecomment">オートマティックおうむ返しコメントより背景や理由を | jfluteの日記</a></div>
 		<p>
 			<em class="keyword">書いておくと嬉しいコメントってどんなコメント？</em>
 			を考え続けることが大切です。
