--- a/web/tutorial/handson/review/codingpolicy.html
+++ b/web/tutorial/handson/review/codingpolicy.html
@@ -65,7 +65,7 @@
 	<p>
 		But there is more to it than that. Please read my blog for more info.
 	</p>
-	<div class="detailpage"><a href="http://d.hatena.ne.jp/jflute/20160912/reviewable">レビューしやすいコード (Reviewable Code) | jfluteの日記</a></div>
+	<div class="detailpage"><a href="https://jflute.hatenadiary.jp/entry/20160912/reviewable">レビューしやすいコード (Reviewable Code) | jfluteの日記</a></div>
 
 	<h2 id="editorwarning">2. Resolving IDE Warnings</h2>
 	<p>
