change to dbflute-howto

--- a/web/ja/manual/function/genbafit/implfit/whererecycle/index.html
+++ b/web/ja/manual/function/genbafit/implfit/whererecycle/index.html
@@ -294,7 +294,7 @@ cb.query().addOrderBy_<span class="abbreviation">...</span>();
 
 	<h2 id="example">Exampleのススメ</h2>
 	<p>
-		dbflute-basic-example では、実際に ArrangeQuery を定義し、テストケースで利用しています。
+		dbflute-howto では、実際に ArrangeQuery を定義し、テストケースで利用しています。
 	</p>
 	<div class="detailpage"><a href="../../../../reference/example/index.html#dicontainer">DBFlute Example - DIコンテナ</a></div>
 <!-- __content-end__ --></div></div>
