write quiz study way of javatry

--- a/web/ja/tutorial/javatry/index.html
+++ b/web/ja/tutorial/javatry/index.html
@@ -302,10 +302,21 @@ log(sea); <span class="comment">// your answer? =&gt; <span class="point">mystic
 	<h3 id="quizlearning">クイズ形式の学び方</h3>
 	<p>
 		ただ、学び方は自由です。プログラミングの本を読みながらでもいいですし、インターネットで調べながらでもいいですし、答えを見てから考えてもいいです。
-	</p>
-	<p>
 		大事なのは、解答することではなく、理解をしてスキルアップすることです。
 	</p>
+	<p>
+		合ってても間違ってても、学んだことがあればコード上にメモっておくと良いでしょう。
+		レビューワーがいる場合は、それで補足をもらえたりするかもしれません。
+	</p>
+<pre><span class="codetitle">e.g. write your study there @Directory</span><code>
+<span class="abbreviation">...</span>
+log(sea); <span class="comment">// your answer? =&gt; rhythm(x) =&gt; mystic(o)</span>
+<span class="subpoint">// これこれこうだと思ったけど、実はこういうことらしくてこうだった、なるほど</span>
+
+<span class="abbreviation">...</span>
+log(sea); <span class="comment">// your answer? =&gt; mystic(o)</span>
+<span class="subpoint">// 予想は合ってたんだけど、調べてみるとさらにこういうことのようだ、へー</span>
+</code></pre>
 
 	<h2 id="codingexercise">コーディング形式のエクササイズ</h2>
 	<h3 id="codingflow">エクササイズの流れ</h3>
