just fix: RemoteApiGen fileupload description

--- a/web/ja/lastaflute/howto/architecture/remoteapigen.html
+++ b/web/ja/lastaflute/howto/architecture/remoteapigen.html
@@ -628,7 +628,7 @@ remoteApiRule.<span class="point">beanPropertyManualMappingClass</span> = <span 
 	</p>
 	<h3 id="fileupload">ファイルアップロード <span class="frm">(手動作成が必要)</span></h3>
 	<p>
-		RemoteApiGenとしては自動生成対象外ですが、手動作成Behaviorでうまく工夫すればリクエストを実現することはできます。
+		RemoteApiGenとしては自動生成対象されるはず <span class="frm">(要検証)</span> ですが、リクエストを送信するためにはBehavior側で工夫が必要です。
 	</p>
 	<p>
 		Exampleが lastaflute-test-fortress にありますので参考に。
