add RemoteApiGen enquireus

--- a/web/ja/lastaflute/howto/architecture/remoteapigen.html
+++ b/web/ja/lastaflute/howto/architecture/remoteapigen.html
@@ -639,6 +639,17 @@ remoteApiRule.<span class="point">beanPropertyManualMappingClass</span> = <span 
 		レスポンスのschemaが複数あっても1件目 <span class="frm">(HTTPステータスコード200?) </span> のみが自動生成されます。
 	</p>
 
+	<div class="inucolumn">
+		<h2 id="enquireus">わからないことはぜひ聞いて</h2>
+		<p>
+			RemoteApiGenはコミッターも少なく、細かいところまでドキュメントを整備するリソースもないのが正直なところです。
+		</p>
+		<p>
+			わからないことや相談したいことがあれば、ぜひMLやSlackなどでお聞きください。
+		</p>
+		<div class="detailpage"><a href="../../../manual/topic/office/feedback.html">質問、相談、要望などフィードバック！</a></div>
+	</div>
+
 	<h2 id="exampleproject">Exampleプロジェクト</h2>
 	<p>
 		本家リポジトリがそのままExampleになります。
