add release note for Intro 0.6.0

--- a/web/ja/manual/function/generator/intro/index.html
+++ b/web/ja/manual/function/generator/intro/index.html
@@ -62,6 +62,7 @@
 		以下のようにリリースされています。
 	</p>
 	<dl class="shortkeymainlist">
+		<dt>2022/01/01</dt><dd><em class="mark">0.6.0</em> :: Intro経由のSchemaHtmlからSchemaDiagramとNeighborhoodSchemaHtmlを表示できるよう修正</dd>
 		<dt>2022/01/01</dt><dd><em class="mark">0.5.0</em> :: SchemaPolicyCheck画面のUI改善</dd>
 		<dt>2021/05/01</dt><dd><em class="mark">0.4.0</em> :: SchemaPolicyCheck画面のデザイン修正</dd>
 		<dt>2021/01/01</dt><dd><em class="mark">0.3.11</em> :: ReplaceSchema画面にボタン追加、全体デザインの微修正</dd>
