improve section11 first on-parade, thanks miyazaki-kun

--- a/web/ja/tutorial/handson/section11.html
+++ b/web/ja/tutorial/handson/section11.html
@@ -146,7 +146,10 @@
 			<ul class="supplementlist">
 				<li>会員ステータス、会員サービス、サービスランク、購入、購入支払、会員ステータス経由の会員ログインも取得</li>
 				<li>(基点テーブルごとの)モバイルからのログイン回数も導出して取得する</li>
-				<li>指定された判定次第で未払い購入の存在しない会員だけを対象にできるように</li>
+				<!-- 昔はこうだったけど、miyazakiくんとの1on1でもっと難しくしようという話になった by jflute (2022/08/30)
+				 <li>指定された判定次第で未払い購入の存在しない会員だけを対象にできるように</li>
+				 -->
+				<li>指定された判定次第で支払済み購入しか存在しない会員だけを対象にできるように</li>
 				<li>購入は商品の定価の高い順、購入価格の高い順で並べる</li>
 				<li>会員ごとの方のログイン回数と購入一覧と購入支払一覧をデバッグログに綺麗に出力する</li>
 				<li>購入支払は、最も推奨されている方法のみ検索</li>
