small fix: RemoteApiGen documents

--- a/web/ja/lastaflute/howto/architecture/remoteapigen.html
+++ b/web/ja/lastaflute/howto/architecture/remoteapigen.html
@@ -674,10 +674,12 @@ remoteApiRule.<span class="point">beanPropertyManualMappingClass</span> = <span 
 	</div>
 
 	<h2 id="exampleproject">Exampleプロジェクト</h2>
+	<h3 id="officialrepository">本家リポジトリ</h3>
 	<p>
 		本家リポジトリがそのままExampleになります。
 	</p>
 	<div class="detailpage"><a href="https://github.com/dbflute-example/dbflute-example-with-remoteapi-gen/">dbflute-example-with-remoteapi-gen | Github</a></div>
+	<h3 id="lastarepository">LastaFluteのテストプロジェクト</h3>
 	<p>
 		lastaflute-test-fortressプロジェクト <span class="frm">(テスト用のプロジェクト)</span>
 		に、RemoteHarborBhv という RemoteApi の Example コードもあります。 
