add 2023/02/01 patch of 1.2.6

--- a/web/ja/environment/changelog/index.html
+++ b/web/ja/environment/changelog/index.html
@@ -33,6 +33,13 @@
         <div class="new">
           <h3>NEW</h3>
           <ul>
+            <li>DBFlute Engine: DBFlute Engine: upgrade MySQL JDBC for Java11, TLS headache #168<span class="frm">*2023/02/01パッチ</span></li>
+            <li>DBFlute Engine: LastaFlute FreeGen Geared option, include also swagger #165<span class="frm">*2023/02/01パッチ</span></li>
+            <li>DBFlute Engine: enable adding-schema option to also serial sequence #163<span class="frm">*2023/02/01パッチ</span></li>
+            <li>DBFlute Engine: small adjustment for ParallelGenerate #161<span class="frm">*2023/02/01パッチ</span></li>
+            <li>DBFlute Engine: unneeded pickup merge if no piece and mapping file #158<span class="frm">*2023/02/01パッチ</span></li>
+            <li>DBFlute Engine: isSuppressSystemRandomSequence for H2 test project #156<span class="frm">*2023/02/01パッチ</span></li>
+            <li>DBFlute Engine: default comments of neighborhoodSchemaHtmlMap, schemaDiagramMap<span class="frm">*2023/02/01パッチ</span></li>
             <li>DBFlute Engine: avoid Git conflict of history diffmap #129</li>
             <li>DBFlute Engine: upgrade ESFlute to 2022/05 version #146</li>
             <li>DBFlute Engine: support multipleDB for Google Guice #144</li>
