add fix AsBoolean's of().get() mistake to changelog

--- a/web/ja/environment/changelog/index.html
+++ b/web/ja/environment/changelog/index.html
@@ -33,6 +33,7 @@
         <div class="new">
           <h3>NEW</h3>
           <ul>
+            <li>DBFlute Engine: fix AsBoolean's of().get() mistake, to of().orElse(null) #142</li><span class="frm">*2023/02/06パッチ</span></li>
             <li>DBFlute Engine: DBFlute Engine: upgrade MySQL JDBC for Java11, TLS headache #168<span class="frm">*2023/02/01パッチ</span></li>
             <li>DBFlute Engine: LastaFlute FreeGen Geared option, include also swagger #165<span class="frm">*2023/02/01パッチ</span></li>
             <li>DBFlute Engine: enable adding-schema option to also serial sequence #163<span class="frm">*2023/02/01パッチ</span></li>
