small fix: broken link to faicli

--- a/web/ja/lastaflute/howto/architecture/exceptionhandling.html
+++ b/web/ja/lastaflute/howto/architecture/exceptionhandling.html
@@ -564,7 +564,7 @@ app.web
 		<p>
 			JSON API で戻すJSONのイメージはこちら
 		</p>
-		<div class="detailpage"><a href="../impldesign/jsondesign.html#egfaiclibizexp">業務例外のJSON (of ふぇいくらパターン)</a></div>
+		<div class="detailpage"><a href="../impldesign/jsonfaicli.html#bizerror">業務例外のJSON (of ふぇいくらパターン)</a></div>
 		<h3 id="lastanodata">LastaFluteなら組み込み</h3>
 		<p>
 			すでにこのページをしっかり読んでいれば、LastaFluteの思想がなんとなくわかるかと思います。EntityAlreadyDeletedException
