--- a/web/ja/environment/changelog/index.html
+++ b/web/ja/environment/changelog/index.html
@@ -33,6 +33,9 @@
         <div class="new">
           <h3>NEW</h3>
           <ul>
+            <li>DBFlute Engine: use Spring Qualifier not to depend on jakarta package #170</li><span class="frm">*2023/03/13パッチ</span></li>
+            <li>DBFlute Engine: dfprop option to change javax to jakarta package #169</li><span class="frm">*2023/03/13パッチ</span></li>
+            <li>DBFlute Engine: LastaFlute FreeGen Geared option, for Maven multi project #164</li><span class="frm">*2023/03/08パッチ</span></li>
             <li>DBFlute Engine: LoadDataReverse, skipping common for TSV #166</li><span class="frm">*2023/02/12パッチ</span></li>
             <li>DBFlute Engine: fix AsBoolean's of().get() mistake, to of().orElse(null) #142</li><span class="frm">*2023/02/06パッチ</span></li>
             <li>DBFlute Engine: DBFlute Engine: upgrade MySQL JDBC for Java11, TLS headache #168<span class="frm">*2023/02/01パッチ</span></li>
