improve DBFlute version expression

--- a/web/ja/environment/newest.html
+++ b/web/ja/environment/newest.html
@@ -28,18 +28,29 @@
 	${indexlist}
 
 	<h2 id="newest">最新バージョンの情報</h2>
-	<h3 id="java8newest">Java8 <span class="frm">(1.1.x)</span></h3>
+	<p>
+		ここで言うJava8版、Java6版というのは、DBFlute自身のコンパイルバージョンのことです。
+		アプリで利用するJavaのバージョンに近いものを選びましょう。(例えば、Java10ならJava8版)
+	</p>
+	<h3 id="java8newest">Java8版 <span class="frm">(1.1.x)</span></h3>
 	<dl class="valuemainlist">
 		<dt>バージョン</dt><dd>1.2.6</dd>
 		<dt>リリース日</dt><dd>2022/05/08</dd>
 		<dt>製品ステータス</dt><dd>Product</dd>
 	</dl>
-	<h3 id="java6newest">Java6,7 <span class="frm">(1.0.x)</span></h3>
+	<p>
+		<span class="frm">※Java8でコンパイルされたDBFluteです。Java8以降のJavaで動作します。</span>
+	</p>
+	<h3 id="java6newest">Java6版 <span class="frm">(1.0.x)</span></h3>
 	<dl class="valuemainlist">
 		<dt>バージョン</dt><dd>1.0.5N</dd>
 		<dt>リリース日</dt><dd>2014/12/01</dd>
 		<dt>製品ステータス</dt><dd>Product</dd>
 	</dl>
+	<p>
+		<span class="frm">※Java6でコンパイルされたDBFluteです。Java6以降のJavaで動作します。
+		つまり、Java8以降でも動作はしますが、Java8の新文法などを利用した機能は提供されません。</span>
+	</p>
 	<h3 id="engineruntime">エンジンとランタイムのバージョン関係</h3>
 	<p>
 		DBFluteエンジンとDBFluteランタイムは、バージョン番号が一致します。
@@ -49,7 +60,7 @@
 	<div class="relatedpage"><a href="../manual/function/ormapper/runtime/index.html">DBFluteランタイム</a></div>
 
 	<h2 id="download">最新バージョンのダウンロード</h2>
-	<h3 id="java8engine">Java8</h3>
+	<h3 id="java8engine">Java8版</h3>
 	<p>
 		DBFluteエンジンはこちら: <a href="https://github.com/dbflute/dbflute-core/releases/download/dbflute-1.2.6/dbflute-1.2.6.zip">dbflute-1.2.6.zip</a>
 	</p>
@@ -60,7 +71,7 @@
 	<p>
 		DBFluteランタイムは、MavenCentralにて org.dbflute - dbflute-runtime で取得できます。
 	</p>
-	<h3 id="java6engine">Java6,7</h3>
+	<h3 id="java6engine">Java6版</h3>
 	<p>
 		DBFluteエンジンはこちら: <a href="http://dbflute.seasar.org/download/dbflute/dbflute-1.0.5N.zip">dbflute-1.0.5N.zip</a>
 	</p>
